# assertions

./: .gitignore  Makefile  assert.cabal  default.nix
Test/: Assert.hs
test/: Assert.hs
test/fixtures/: Green.hs  Mixed.hs  Red.hs
