name:                assert
version:             0.1.0.1
synopsis:            A simple testing framework.
license:             MIT
license-file:        LICENSE
author:              vi
maintainer:          me@vikramverma.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Test.Assert
  build-depends:       base >=4.6 && <4.7, ansi-terminal >=0.6 && <0.7
  default-language:    Haskell2010
